--- a/NotIMDB/Gemfile
+++ b/NotIMDB/Gemfile
@@ -26,7 +26,10 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 #bootstrap
 
-gem 'bootstrap-sass', '~> 3.2.0'
+
+gem 'bootstrap-sass', '~> 3.3.6'
+gem 'sass-rails', '>= 3.2'
+
 gem 'autoprefixer-rails'
 
 # Use ActiveModel has_secure_password
